cmake_minimum_required(VERSION 3.26)
project(DA2025_PRJ1_T13_G07)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE_TMP "${CMAKE_BUILD_TYPE}")
set(CMAKE_BUILD_TYPE "Release")
include_directories(TP4)

set( CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE_TMP} )

add_executable(
    
)

target_link_libraries(DA2025_PRJ1_T13_G07)